# Grader

./: .gitignore  README.md  requirements.txt  todo.md
client/student/: README.md  config.yaml  submit.py  submit_new.py
client/teacher/: Dockerfile  prepare_student_package.py  submit_prof.py
client_testing/example_student/: config.yaml  submit.py
client_testing/example_teacher/: config.yaml  submit_prof.py
manual_testing/example_student/: submit_stud.py
manual_testing/example_teacher/: submit_prof.py
server_testing/: README.md
server_testing/output/: score.txt
service/: courses.txt  grader.py  grader_service.py  pyproject.toml  requirements.txt  students.txt  test_grader_service.py  utils.py
service/container/: utils.py
service/db/: courses.txt  (+3 more)
service_1/: grader.py  utils.py
services/: README.md  config.py  main.py  pyproject.toml  submit_prof.py  submit_stud.py  utils.py
services/api/: __init__.py  db_handler.py  grader_handler.py  home.py  main.py  student.py  teacher.py  validation.py
services/api/routes/: __init__.py  home.py  root.py  student.py  tags.py  teacher.py
services/database/: grader.db  grader_schema.md
services/db/: database.py  database_utils.py  db_utils.py  grader.db  grader_create.sql  grader_schema.md
services/grader/: grader.py
services/mail/: __init__.py  mail.py
services/templates/: index.html
services/tests/: test_integration.py
student/: config.yaml  submit-script.py
teacher/: config.yaml  submit-prof.py
teacher_base/: Dockerfile  submit_prof.py
tests/: test_api.py  test_grader.py  test_submit.py
(+11 files in other folders)
