[project]
name = "Autograder"
version = "0.1.0"
description = "Autograder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "aiosmtpd>=1.4.6",
]
